--- a/README.adoc
+++ b/README.adoc
@@ -4,7 +4,7 @@ This repository holds a sample REST service used in most of the https://github.c
 
 It's a very simple Spring Boot service with a handful of endpoints used to demonstrate Kubernetes concepts.
 
-You can start it locally with `./mvnw spring-boot:run` footnote:[Instead of the Maven wrapper `mvnw` you can also use a locally installed `mvn`] and get a random number:
+You can start it locally with with `./mvnw -pl spring spring-boot:run` footnote:[Instead of the Maven wrapper `mvnw` you can also use a locally installed `mvn`] and get a random number:
 
 [source, bash]
 ----
