--- a/README.adoc
+++ b/README.adoc
@@ -2,7 +2,7 @@
 
 This repository holds a sample REST service used in most of the https://github.com/k8spatterns/examples/[examples] for the book "Kubernetes Patterns" by https://github.com/bibryam[Bilgin Ibryam] and https://github.com/rhuss[Roland Huß].
 
-It's a very simple Spring Boot service with a handful of endpoints used to demonstrate Kubernetes concepts.
+It's a simple Spring Boot service with a handful of endpoints used to demonstrate Kubernetes concepts.
 
 You can start it locally with with `./mvnw -pl spring spring-boot:run` footnote:[Instead of the Maven wrapper `mvnw` you can also use a locally installed `mvn`] and get a random number:
 
@@ -107,9 +107,13 @@ There is also a single class `RandomRunner` included which creates a list of ran
 
 # Create a file with 100000 lines in /tmp/random_numbers.txt
 java -cp target/classes RandomRunner /tmp/random_numbers.txt 100000
+
+# Write 100000 lines to /dev/random_seed, wait 30s, and then repeat endlessly.
+java -c target/classes RandomRunner /dev/random_seed 100000 30
 ----
 
 This command is used in the _Batch Job_ and _Periodic Job_ pattern example.
+The last example is used in _Daemon Service_ pattern example.
 
 ### Building
 
